--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1>Hello, World!</h1>
-<img src="Image1..jpg" alt="world" />
+img src = "Image1..jpg" alt="world" width="600">
 </body>
 </html>
