--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1>Hello, World!</h1>
-<img src="image 3.pgn" alt="World image" width="600" height="600"/>
+<img src="image 3.pgn" alt="World image"/>
 </body>
 </html>
