--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Hello, World!</h1>
 
-<img src="image 1.pgn" alt="World image"/>
+<img src="Image 1.png" alt="World image"/>
 
 </body>
 </html>
